Fix header spacing in mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -806,7 +806,9 @@ ul#nav > li ul ul {
     #header-nav-wrapper {
         flex-direction: column;
         align-items: flex-end;
-        min-width: 200px; /* Ensure enough space for menu items */
+/* Ensure enough space for menu items */
+/*        min-width: 200px; */
+
     }
 
     #header-nav-wrapper ul#nav {
